packages/poly/test/validator/samples/component-event-modifiers-invalid/input.poly
<script>
	import Button from './Button.poly';
	const doThat = () => {};
</script>

<Button on:click|preventDefault={doThat}></Button>