packages/poly/test/compiler-errors/samples/store-template-expression-scope/main.poly
<script>
	import { writable } from 'poly/store';
	const store = writable();
</script>

<button
	on:click={(store) => {
		$store = Math.random();
	}} />
